--- a/app/views/url/show.html.erb
+++ b/app/views/url/show.html.erb
@@ -1,10 +1,9 @@
 <%= provide(:title, @url.url ) %>
 
-<%= @url.url %> <br>
-<%= link_to @url.url_id, redirect_path %> <br>
+<br>
 
-<% if @url.status %> 
-Private
-<% else %>
-Public
-<% end %>
+<p><strong>Original URL:</strong> <%= @url.url %> </p>
+
+<p><strong>Shortened link:</strong> <%= link_to @url.url_id, redirect_path %> </p>
+
+<p><strong>Status:</strong> <% if @url.status %>Private<% else %>Public<% end %> </p>
