Removed long footer added more useful footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
     <footer>
       <div class="container">
-        <span class="text-muted">Copyright 2018 - <%= Time.current.year %>, Berkhan Berkdemir and the <a href="https://github.com/BerkhanBerkdemir/redirectails">RedirecTails</a> contributors</span>
+        <span class="text-muted">Copyright <%= Time.current.year %>, <a href="https://github.com/BerkhanBerkdemir/redirectails">RedirecTails</a></span>
       </div>
     </footer>
 
