--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -19,6 +19,9 @@
           </div>
         </div>
       </div>
+      <div class="form-check text-right">
+        <%= form.check_box :status %> <%= t('landing.is_private') %>
+      </div>
     <% end %>
   </div>
 </div>
