--- a/app/views/url/show.html.erb
+++ b/app/views/url/show.html.erb
@@ -1,9 +1,6 @@
 <%= provide(:title, @url.url ) %>
-
 <br>
-
 <p><strong><%= t('show.original_url') %>:</strong> <%= @url.url %> </p>
-
 <p><strong><%= t('show.shortened_link') %>:</strong> <%= link_to @url.url_id, redirect_path %> </p>
-
+<p><strong><%= t('show.clicked') %> :</strong> <%= @url.click %> </p>
 <p><strong><%= t('show.status') %>:</strong> <% if @url.status %><%= t('show.private') %><% else %><%= t('show.public') %><% end %> </p>
