--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -23,7 +23,9 @@
       <td><%= url.url_id %></td>
       <td><% if url.status %>Private<% else %>Public<% end %></td>
       <td><%= url.created_at %></td>
-      <td><%= link_to 'Delete', delete_path(url), method: :delete %></td>
+      <td><%= link_to 'Delete', admin_path(url),
+                      method: :delete,
+                      data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
   </tbody>
