--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,16 @@
 
   <body>
     <div class="container">
+      <div class="" style="text-align: right;">
+        <%= link_to 'Generate', root_path %> | 
+        <% unless current_user %>
+          <%= link_to 'Login', login_path %>
+        <% else %>
+          <%= link_to 'Dashboard', admin_index_path %> | 
+          <%= link_to 'Logout', logout_path %>
+        <% end %>
+      </div>
+
       <%= yield %>
     </div>
 
