--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
           <%= link_to 'Login', login_path %>
         <% else %>
           <%= link_to 'Dashboard', admin_index_path %> | 
+          <%= link_to 'Settings', edit_profile_path(current_user.username) %> | 
           <%= link_to 'Logout', logout_path %>
         <% end %>
       </div>
