--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,29 +4,48 @@
   <div class="alert alert-<%= message_type %>"><%= message %></div>
 <% end %>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Original URL</th>
-      <th>Generated URL</th>
-      <th>Status</th>
-      <th>Created</th>
-      <th>Action</th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @url.each do |url| %>
-    <tr>
-      <td><%= url.id %></td>
-      <td><%= url.url %></td>
-      <td><%= url.url_id %></td>
-      <td><% if url.status %>Private<% else %>Public<% end %></td>
-      <td><time datetime="<%= url.created_at %>"><%= url.created_at.strftime("%A, %b %d, %Y, %I:%M %p") %></time></td>
-      <td><%= link_to 'Delete', admin_path(url),
-                      method: :delete,
-                      data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<div class="row">
+  <div class="col-12 col-md-3">
+    <h2>Sidebar</h2>
+    <div class="list-group">
+      <%= link_to 'Analytics',
+                  admin_index_path,
+                  class: 'list-group-item list-group-item-action' %>
+      <%= link_to 'Latest URL',
+                  admin_index_path,
+                  class: 'list-group-item list-group-item-action' %>
+    </div>
+  </div>
+  <div class="col-12 col-md-9">
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Original URL</th>
+            <th>Generated URL</th>
+            <th>Status</th>
+            <th>Created</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+        <% @url.each do |url| %>
+          <tr>
+            <td><%= url.url %></td>
+            <td><%= url.url_id %></td>
+            <td><% if url.status %>Private<% else %>Public<% end %></td>
+            <td>
+              <time datetime="<%= url.created_at %>">
+                <%= url.created_at.strftime("%A, %b %d, %Y, %I:%M %p") %>
+              </time>
+            </td>
+            <td><%= link_to 'Delete', admin_path(url),
+                                      method: :delete,
+                                      data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
