--- a/app/views/landings/index.html.erb
+++ b/app/views/landings/index.html.erb
@@ -1,17 +1,15 @@
 <%= provide(:title, t('landing.title')) %>
 
-<div style="height: 160px;"></div>
-
 <% flash.each do |message_type, message| %>
   <div class="alert alert-<%= message_type %>"><%= message %></div>
 <% end %>
 
-<h1 class="text-center" style="padding-top: 40px;">RedirecTails</h1>
+<h1 class="text-center" style="padding-top: 80px;">RedirecTails</h1>
 
-<div class="row">
-  <div class="col-lg-6" style="margin: 0 auto;">
+<div class="row h-100 justify-content-center align-items-center">
+  <div class="col-12 col-md-6">
     <%= form_for :url, url: generate_path, local: true do |form| %>
-      <div class="input-group col-md-12">
+      <div class="input-group">
         <div class="input-group mb-3">
           <%= form.url_field :url, class: 'form-control', required: true, autofocus: true, placeholder: t('landing.enter_an_url'), 'aria-label': t('landing.enter_an_url'), 'aria-describedby': t('landing.enter_an_url') %>
           <div class="input-group-append">
