--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,22 +18,42 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="" style="text-align: right;">
-        <%= link_to 'Generate', root_path %> | 
-        <% unless current_user %>
-          <%= link_to 'Login', login_path %>
-        <% else %>
-          <%= link_to 'Dashboard', admin_index_path %> | 
-          <%= link_to 'Settings', edit_profile_path(current_user.username) %> | 
-          <%= link_to 'Logout', logout_path %>
-        <% end %>
-      </div>
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-md navbar-light bg-light mb-4">
+        <div class="container">
+          <%= link_to 'RedirecTails', root_path, class: 'navbar-brand' %>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto"></ul>
+            <ul class="navbar-nav">
+              <% unless current_user %>
+                <li class="nav-item">
+                  <%= link_to 'Login', login_path, class: 'nav-link' %>
+                </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to 'Dashboard', admin_index_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to 'Settings', edit_profile_path(current_user.username), class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to 'Logout', logout_path, class: 'nav-link' %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
 
+    <div class="container h-100">
       <%= yield %>
     </div>
 
-    <footer>
+    <footer class="modal-footer">
       <div class="container">
         <span class="text-muted">Copyright <%= Time.current.year %>, <a href="https://github.com/BerkhanBerkdemir/redirectails">RedirecTails</a></span>
       </div>
