Added background color

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
       <%= yield %>
     </div>
 
-    <footer class="modal-footer">
+    <footer class="modal-footer bg-light">
       <div class="container">
         <span class="text-muted">Copyright <%= Time.current.year %>, <a href="https://github.com/BerkhanBerkdemir/redirectails">RedirecTails</a></span>
       </div>
