--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,17 +30,17 @@
             <ul class="navbar-nav">
               <% unless current_user %>
                 <li class="nav-item">
-                  <%= link_to 'Login', login_path, class: 'nav-link' %>
+                  <%= link_to t('navbar.login'), login_path, class: 'nav-link' %>
                 </li>
               <% else %>
                 <li class="nav-item">
-                  <%= link_to 'Dashboard', admin_index_path, class: 'nav-link' %>
+                  <%= link_to t('navbar.dashboard'), admin_index_path, class: 'nav-link' %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to 'Settings', edit_profile_path(current_user.username), class: 'nav-link' %>
+                  <%= link_to t('navbar.settings'), edit_profile_path(current_user.username), class: 'nav-link' %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to 'Logout', logout_path, class: 'nav-link' %>
+                  <%= link_to t('navbar.logout'), logout_path, class: 'nav-link' %>
                 </li>
               <% end %>
             </ul>
