--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,7 @@
 <h1>Edit profile</h1>
 
 <%= form_with model: @user, url: profile_path, method: :PUT do |form| %>
-  <%= form.label :email %>
-  <%= form.email_field :email %> <br>
-  <%= form.label :username %>
-  <%= form.text_field :username %> <br>
+  <%= t 'global.email' %>: <%= form.email_field :email %> <br>
+  <%= t 'global.username' %>: <%= form.text_field :username %> <br>
   <%= form.submit %>
 <% end %>
