--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,9 @@
 <h1>Edit profile</h1>
 
-<%= form_with model: @user, url: profile_path, method: :PUT do |form| %>
+<%= form_with model: @user, url: profile_path, method: :put do |form| %>
   <%= t 'global.email' %>: <%= form.email_field :email %> <br>
   <%= t 'global.username' %>: <%= form.text_field :username %> <br>
+  <%= t 'global.password' %>: <%= form.password_field :password %> <abbr title="You have to enter your password">Warning</abbr> <br>
+  <%= t 'global.password' %>: <%= form.password_field :password_confirmation %> <br>
   <%= form.submit %>
 <% end %>
