--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,16 @@
-<h1>Edit profile</h1>
+<%= provide(:title, 'Edit') %>
 
-<%= form_with model: @user, url: profile_path, method: :put do |form| %>
-  <%= t 'global.email' %>: <%= form.email_field :email %> <br>
-  <%= t 'global.username' %>: <%= form.text_field :username %> <br>
-  <%= t 'global.password' %>: <%= form.password_field :password %> <abbr title="You have to enter your password">Warning</abbr> <br>
-  <%= t 'global.password' %>: <%= form.password_field :password_confirmation %> <br>
-  <%= form.submit %>
-<% end %>
+<h1>Edit profile</h1>
+<div class="d-flex justify-content-center">
+  <%= form_with model: @user, url: profile_path, method: :put do |form| %>
+    <%= t 'global.email' %>
+    <%= form.email_field :email, class: 'form-control' %>
+    <%= t 'global.username' %>
+    <%= form.text_field :username, class: 'form-control' %>
+    <%= t 'global.password' %>
+    <%= form.password_field :password, class: 'form-control' %> <abbr title="You have to enter your password">Warning</abbr>
+    <%= t 'global.password' %>
+    <%= form.password_field :password_confirmation, class: 'form-control' %> <br>
+    <%= form.submit "Submit", class: 'btn btn-warning' %>
+  <% end %>
+</div>
