dynamic password conf name added

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,9 +7,9 @@
     <%= form.email_field :email, class: 'form-control' %>
     <%= t 'global.username' %>
     <%= form.text_field :username, class: 'form-control' %>
-    <%= t 'global.password' %>
-    <%= form.password_field :password, class: 'form-control' %> <abbr title="You have to enter your password">Warning</abbr>
-    <%= t 'global.password' %>
+    <%= t 'global.password' %> <abbr title="You have to enter your password again">Warning</abbr>
+    <%= form.password_field :password, class: 'form-control' %>
+    <%= t 'global.password_confirmation' %>
     <%= form.password_field :password_confirmation, class: 'form-control' %> <br>
     <%= form.submit "Submit", class: 'btn btn-warning' %>
   <% end %>
