Removed abbr tag

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,7 +7,7 @@
     <%= form.email_field :email, class: 'form-control' %>
     <%= t 'global.username' %>
     <%= form.text_field :username, class: 'form-control' %>
-    <%= t 'global.password' %> <abbr title="You have to enter your password again">Warning</abbr>
+    <%= t 'global.password' %>
     <%= form.password_field :password, class: 'form-control' %>
     <%= t 'global.password_confirmation' %>
     <%= form.password_field :password_confirmation, class: 'form-control' %> <br>
